--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.oliverwetterau.neo4j</groupId>
     <artifactId>websockets-core</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.1</version>
     <packaging>jar</packaging>
 
     <name>Neo4j Websockets Client/Server Framework - Core Library</name>
@@ -34,12 +34,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>1.7</java.version>
         <complianceLevel>${java.version}</complianceLevel>
 
-        <spring.version>4.1.7.RELEASE</spring.version>
-        <jackson.version>2.6.2</jackson.version>
-        <sl4j.version>1.7.12</sl4j.version>
+        <spring.version>4.1.8.RELEASE</spring.version>
+        <jackson.version>2.6.3</jackson.version>
+        <sl4j.version>1.7.6</sl4j.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -66,6 +66,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${sl4j.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
